packages/next-swc/crates/core/tests/errors/styled-jsx/nested-style-tags/output.stderr
error: Detected nested styled-jsx tag.
Read more: https://nextjs.org/docs/messages/nested-styled-jsx-tags
  --> input.js:13:9
   |
13 |         <style jsx>{``}</style>
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: Detected nested styled-jsx tag.
Read more: https://nextjs.org/docs/messages/nested-styled-jsx-tags
  --> input.js:21:9
   |
21 |         <style jsx global>{``}</style>
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Detected nested styled-jsx tag.
Read more: https://nextjs.org/docs/messages/nested-styled-jsx-tags
  --> input.js:26:9
   |
26 |         <style jsx>{styles}</style>
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

